tests/invalid/ArrayAssign_Invalid_4.whiley
type Board is { bool[][] cells }

method set(Board b, int x, int y):
    b[y][x] = true
